--- a/Task1LoginRegister/Views/Cart/Index.cshtml
+++ b/Task1LoginRegister/Views/Cart/Index.cshtml
@@ -180,7 +180,7 @@
                                 </div>
                                 <div class="col-8 col-sm-5 col-md-6 product-details">
                                     <h5>
-                                        <a href="/Home/Details/@item.ProductId?variantId=@item.ProductVariant.VariantId" class="text-decoration-none text-dark" target="_blank" rel="noopener noreferrer">
+                                        <a href="/Home/Details/@item.ProductId?variantId=@item.ProductVariant?.VariantId" class="text-decoration-none text-dark" target="_blank" rel="noopener noreferrer">
                                             @if (item.ProductVariantId != null && item.ProductVariant != null)
                                             {
                                                 @item.ProductVariant.VarinatName
