--- a/Task1LoginRegister/Views/Payment/RazorpayPaymentList.cshtml
+++ b/Task1LoginRegister/Views/Payment/RazorpayPaymentList.cshtml
@@ -76,6 +76,7 @@
     <script>
         $(document).ready(function () {
             $('#razorpayTable').DataTable({
+                 "order": [[0, "desc"]],
                 responsive:true,
             });
         });
