--- a/Task1LoginRegister/Areas/Admin/Views/Shared/_VariantForm.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Shared/_VariantForm.cshtml
@@ -113,7 +113,7 @@
     {
         <div class="card-body">
             <div class="form-group mt-3">
-                <label class="control-label">@attrib.Name</label>
+                <label class="form-label">@attrib.Name</label>
                 <div>
                     @foreach (var value in attrib.ProductAttributeValue)
                     {
