--- a/Task1LoginRegister/Areas/Admin/Views/VariantAttributeValues/Create.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/VariantAttributeValues/Create.cshtml
@@ -18,8 +18,8 @@
                 <select asp-for="VariantId" class ="form-control" asp-items="ViewBag.VarinatId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="AttrbuteValueId" class="control-label"></label>
-                <select asp-for="AttrbuteValueId" class ="form-control" asp-items="ViewBag.AttrbuteValueId"></select>
+                <label asp-for="AttributeValueId" class="control-label"></label>
+                <select asp-for="AttributeValueId" class ="form-control" asp-items="ViewBag.AttrbuteValueId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
