--- a/Task1LoginRegister/Areas/Admin/Views/VariantAttributeValues/Edit.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/VariantAttributeValues/Edit.cshtml
@@ -20,9 +20,9 @@
                 <span asp-validation-for="VariantId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AttrbuteValueId" class="control-label"></label>
-                <select asp-for="AttrbuteValueId" class="form-control" asp-items="ViewBag.AttrbuteValueId"></select>
-                <span asp-validation-for="AttrbuteValueId" class="text-danger"></span>
+                <label asp-for="AttributeValueId" class="control-label"></label>
+                <select asp-for="AttributeValueId" class="form-control" asp-items="ViewBag.AttrbuteValueId"></select>
+                <span asp-validation-for="AttributeValueId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
