#Added attribute adding for main product and corrected order and payment via variant and main

--- a/Task1LoginRegister/Areas/Admin/Views/ProductVariant/Delete.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/ProductVariant/Delete.cshtml
@@ -4,6 +4,12 @@
     ViewData["Title"] = "Delete";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+@if (TempData["WarningMessage"] != null)
+{
+    <div class="alert alert-warning">
+        @TempData["WarningMessage"]
+    </div>
+}
 
 <h1>Delete</h1>
 
