--- a/Task1LoginRegister/Views/Cart/Index.cshtml
+++ b/Task1LoginRegister/Views/Cart/Index.cshtml
@@ -192,7 +192,7 @@
                                         </a>
                                     </h5>
 
-                                    @if (item.ProductVariantId != null && !string.IsNullOrEmpty(item.SelectedAttributes))
+                                    @if (!string.IsNullOrEmpty(item.SelectedAttributes))
                                     {
                                         <p class="badge bg-black">
                                             @{
